trunk/Archive2/35/c815eabb741ca9/output
main.cpp: In function 'int main()':
main.cpp:9:35: warning: writing into constant object (argument 2) [-Wformat=]
     scanf("%d", " %c", &nome, &num);
                                   ^
main.cpp:9:35: warning: format '%d' expects argument of type 'int*', but argument 2 has type 'const char*' [-Wformat=]
main.cpp:9:35: warning: too many arguments for format [-Wformat-extra-args]
main.cpp:11:22: error: invalid conversion from 'int' to 'const char*' [-fpermissive]
     printf( num, nome);
                      ^
