trunk/Archive2/35/c815eabb741ca9/main.cpp
#include <stdio.h>
#include <stdlib.h>

int main()
{
    int num;
    char nome;
    printf("digite seu nome E NÚMERO DE TELEFONE\n");
    scanf("%d", " %c", &nome, &num);

    printf( num, nome);

    return 0;
}